Fix GCP credential grid alignment

--- a/openmetadata-ui/src/main/resources/ui/src/components/common/Form/JSONSchema/JSONSchemaTemplate/connection-object-field-template.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/Form/JSONSchema/JSONSchemaTemplate/connection-object-field-template.less
@@ -107,7 +107,8 @@
     .core-object-field-template-credential-block
       > .core-object-field-template-body-grid
       > .core-object-field-template-property-full-width {
-      grid-column: 1 / -1;
+      grid-column-start: 1;
+      grid-column-end: -1;
     }
 
     .core-object-field-template-body-grid
@@ -118,14 +119,16 @@
       > .core-object-field-template-property-projectId,
     .core-object-field-template-body-grid
       > .core-object-field-template-property:has(> .core-one-of-field) {
-      grid-column: 1 / -1;
+      grid-column-start: 1;
+      grid-column-end: -1;
       justify-self: stretch;
       width: 100%;
     }
 
     .core-object-field-template-property-gcpConfig,
     .core-one-of-field-selected .core-object-field-template-property-projectId {
-      grid-column: 1 / -1 !important;
+      grid-column-start: 1 !important;
+      grid-column-end: -1 !important;
       justify-self: stretch !important;
       width: 100% !important;
     }
@@ -144,7 +147,13 @@
 
     .core-object-field-template-property-gcpConfig
       > .core-one-of-field
-      > .core-one-of-field-select,
+      > .core-one-of-field-select {
+      align-self: flex-start !important;
+      width: min(520px, 100%) !important;
+      max-width: 520px !important;
+      margin-left: 0 !important;
+    }
+
     .core-one-of-field-selected
       .core-object-field-template-property-projectId
       .core-one-of-field-select {
@@ -262,7 +271,8 @@
 
     .core-object-field-template-advanced-grid
       > .core-object-field-template-property-full-width {
-      grid-column: 1 / -1;
+      grid-column-start: 1;
+      grid-column-end: -1;
     }
 
     .core-object-field-template-gated-credential-block {
@@ -294,7 +304,8 @@
 
       .core-object-field-template-credential-field-grid
         > .core-object-field-template-property-full-width {
-        grid-column: 1 / -1;
+        grid-column-start: 1;
+        grid-column-end: -1;
       }
 
       .core-object-field-template-property-toggle-banner {
@@ -377,7 +388,8 @@
 
       .core-object-field-template-advanced-grid
         > .core-object-field-template-property-full-width {
-        grid-column: 1 / -1;
+        grid-column-start: 1;
+        grid-column-end: -1;
       }
 
       .core-object-field-template-credential-field-grid .design-field-label,
@@ -663,6 +675,76 @@
       font-size: 13.5px !important;
       font-weight: 500 !important;
       line-height: 18px !important;
+    }
+
+    [data-field-name='gcpConfig'],
+    .core-one-of-field[data-field-id$='/gcpConfig']
+      > .core-one-of-field-selected
+      [data-field-name='projectId'] {
+      grid-column-start: 1 !important;
+      grid-column-end: -1 !important;
+      justify-self: stretch !important;
+      width: 100% !important;
+    }
+
+    .core-one-of-field[data-field-id$='/gcpConfig'] {
+      width: 100%;
+      min-width: 0;
+    }
+
+    .core-one-of-field[data-field-id$='/gcpConfig']
+      > .core-one-of-field-select {
+      align-self: flex-start !important;
+      width: min(520px, 100%) !important;
+      max-width: 520px !important;
+      margin-left: 0 !important;
+    }
+
+    .core-one-of-field[data-field-id$='/gcpConfig']
+      > .core-one-of-field-selected {
+      width: 100%;
+      min-width: 0;
+    }
+
+    .core-one-of-field[data-field-id$='/gcpConfig']
+      > .core-one-of-field-selected
+      .core-object-field-template-body-grid {
+      display: grid !important;
+      grid-auto-flow: row dense;
+      grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
+      gap: 20px 18px !important;
+      align-items: start;
+    }
+
+    .core-one-of-field[data-field-id$='/gcpConfig']
+      > .core-one-of-field-selected
+      [data-field-name='projectId'] {
+      grid-column-start: 1 !important;
+      grid-column-end: -1 !important;
+      order: -10;
+    }
+
+    .core-one-of-field[data-field-id$='/gcpConfig']
+      > .core-one-of-field-selected
+      [data-field-name='privateKey'] {
+      grid-column-start: 1 !important;
+      grid-column-end: -1 !important;
+    }
+
+    .core-one-of-field[data-field-id$='/gcpConfig']
+      > .core-one-of-field-selected
+      [data-field-name='projectId']
+      > .core-one-of-field {
+      width: 100%;
+      min-width: 0;
+    }
+
+    .core-one-of-field[data-field-id$='/gcpConfig']
+      > .core-one-of-field-selected
+      [data-field-name='projectId']
+      > .core-one-of-field
+      > .core-one-of-field-select {
+      margin-left: 0 !important;
     }
 
     .core-one-of-field-select-popover [slot='label'],
